# bevy_sprite_ex

./: Cargo.toml
examples/: sprite_mask.rs
src/: bundle.rs  lib.rs  sprite.rs  sprite_mask.rs
src/render/: mod.rs  sprite.wgsl  sprite_view_bindings.wgsl
